update SuperPOD discreption and README

--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "amazing-superintendent",
+   "id": "convertible-whale",
    "metadata": {},
    "source": [
     "# \n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aboriginal-proceeding",
+   "id": "surrounded-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "secret-memorial",
+   "id": "complete-lindsay",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "conceptual-technician",
+   "id": "conventional-mason",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "danish-finder",
+   "id": "functioning-stage",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-scope",
+   "id": "eastern-habitat",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "thrown-oakland",
+   "id": "finite-marina",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-shield",
+   "id": "proof-pakistan",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "essential-coral",
+   "id": "angry-canvas",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "interested-stereo",
+   "id": "regional-stake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,11 +205,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-technical",
+   "id": "similar-commonwealth",
    "metadata": {},
    "source": [
     "---\n",
-    "## OUTPUT should looks liek the following \n",
+    "## OUTPUT should looks similar to the following \n",
     "\n",
     "                    Opening ./Megatron-LM/dataset/EN/extractedNVblogs.json\n",
     "                    > building GPT2BPETokenizer tokenizer ...\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "deadly-cleaning",
+   "id": "framed-point",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bridal-frost",
+   "id": "endless-vietnamese",
    "metadata": {},
    "source": [
     "---\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "encouraging-vietnam",
+   "id": "married-necklace",
    "metadata": {},
    "source": [
     "-----\n",
