--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "turned-producer",
+   "id": "governing-exclusion",
    "metadata": {},
    "source": [
     "# \n",
@@ -23,26 +23,26 @@
     "   \n",
     "    - example : naive run vs. improved run \n",
     "        - starts with multiGPUs \n",
-    "    - exercise : beat the record !\n",
+    "    - challenge : beat the record !\n",
     "\n",
-    "it is possible to obtain more than 90% GPU utilizations overall with high tensorcore ops sustained throughout during **training** for all gpus \n"
+    "it is possible to obtain more than 80% GPU utilizations overall with high tensorcore ops sustained throughout during **training** for all gpus \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bulgarian-ceiling",
+   "id": "supported-romantic",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
-    "### intro to profiling \n",
+    "### Intro to profiling \n",
     "\n",
-    "#### NVIDIA Profiling ToolChain\n",
+    "\n",
     "<center><img src=\"./Megatron-LM/pics/NVprofilingToolchain.JPG\" width=\"800\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "economic-product",
+   "id": "friendly-lightning",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-brother",
+   "id": "permanent-mainstream",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -64,14 +64,19 @@
     "<center><img src=\"./Megatron-LM/pics/Alt_callout2terminals.JPG\" width=\"600\"/></center>\n",
     "\n",
     "\n",
-    "            -------- launch profiling sessions to record: visualize on Nsight( please use Nsight Systems version >=2021.3.1 ) ---------\n",
+    "         ----- launch profiling sessions to record: visualize on Nsight( please use Nsight Systems version >=2021.3.1 ) ----\n",
+    "         \n",
+    "[Installing Nsight](https://developer.nvidia.com/gameworksdownload#?dn=nsight-systems-2021-3-1-54)\n",
+    "\n",
+    "[User Guide](https://docs.nvidia.com/nsight-systems/UserGuide/index.html)\n",
+    "\n",
     "<center><img src=\"./Megatron-LM/pics/multigpu_naive_run.jpg\" width=\"1000\"/></center>\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "satellite-drill",
+   "id": "meaning-rubber",
    "metadata": {},
    "source": [
     "---\n",
@@ -81,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "norwegian-fault",
+   "id": "ecological-layer",
    "metadata": {},
    "outputs": [
     {
@@ -99,20 +104,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-shift",
+   "id": "precise-genius",
    "metadata": {},
    "source": [
     "---\n",
     "### Let's first verify training works properly, \n",
     "modify your configuration and the number of GPUs available to you\n",
     "\n",
-    "training output should look simialr to the following \n"
+    "training output should look simialr to the following \n",
+    "\n",
+    "                training ...\n",
+    "                time (ms) | model-and-optimizer-setup: 412.03 | train/valid/test-data-iterators-setup: 3889.83\n",
+    "                [before the start of training step] datetime: 2021-08-27 02:05:24 \n",
+    "                 iteration       10/      25 | consumed samples:  40 | elapsed time per iteration (ms): 886.5 | \n",
+    "                 learning rate:   0.000E+00 | global batch size: 4 | loss scale: 8388608.0 | number of skipped iterations:10 | \n",
+    "                \n",
+    "                ...\n",
+    "                \n",
+    "                [after training is done] datetime: 2021-08-27 02:05:40 \n",
+    "                saving checkpoint at iteration      25 to ./Megatron-LM/sv_ckpt/\n",
+    "                successfully saved checkpoint at iteration      25 to ./Megatron-LM/sv_ckpt/\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cross-ribbon",
+   "id": "educated-story",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "failing-execution",
+   "id": "numeric-relevance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "junior-territory",
+   "id": "dominican-limit",
    "metadata": {},
    "source": [
     "---\n",
@@ -399,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "earlier-pontiac",
+   "id": "preliminary-feeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "robust-columbus",
+   "id": "vanilla-dakota",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -441,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "preceding-trainer",
+   "id": "responsible-senegal",
    "metadata": {},
    "outputs": [
     {
@@ -735,19 +752,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aware-drive",
+   "id": "global-network",
    "metadata": {},
    "source": [
     "--------------------------------------------------\n",
     "-----\n",
     "visualizing the profiles via nsight should look similar to the following \n",
-    "\n",
-    "![multigpus naive run](./Megatron-LM/pics/multigpu_naive_run.jpg)"
+    "<center><img src=\"./Megatron-LM/pics/GPUs_utils_naive.JPG\" width=\"1000\"/></center>\n",
+    "<center><img src=\"./Megatron-LM/pics/multigpu_naive_run.jpg\" width=\"1000\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "weird-belgium",
+   "id": "handled-great",
    "metadata": {},
    "source": [
     "---\n",
@@ -775,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "advanced-grounds",
+   "id": "academic-aquatic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "collect-ladder",
+   "id": "confidential-steam",
    "metadata": {},
    "outputs": [
     {
@@ -1076,18 +1093,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liberal-preliminary",
+   "id": "earlier-priest",
    "metadata": {},
    "source": [
     "--------------------------------------------------\n",
     "visualizing the profiles via nsight should look similar to the following \n",
-    "\n",
-    "![multigpus 2nd run](./Megatron-LM/pics/2ndrun.JPG)"
+    "<center><img src=\"./Megatron-LM/pics/gpus_utils_improved.JPG\" width=\"1000\"/></center>\n",
+    "<center><img src=\"./Megatron-LM/pics/2ndrun.JPG\" width=\"1000\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "electoral-warning",
+   "id": "optimum-resource",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -1095,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rapid-composition",
+   "id": "connected-lincoln",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -1134,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-basic",
+   "id": "fatal-crawford",
    "metadata": {},
    "source": [
     "---\n",
@@ -1144,7 +1161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-assumption",
+   "id": "agreed-gasoline",
    "metadata": {},
    "source": [
     "-----\n",
