--- a/ai/Megatron/English/Python/jupyter_notebook/Day2_0_intro.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2_0_intro.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cooked-female",
+   "id": "trained-reform",
    "metadata": {},
    "source": [
-    "## The Bootcamp computer environment BerzeLiUs ( SuperPOD in Sweden ) -\n",
-    "The [BerzeLiUS](https://blogs.nvidia.com/blog/2021/03/23/ai-supercomputer-sweden/) system consists of 60 NVIDIA DGX A100 systems, \n",
-    "linked on a 200 Gbit/second NVIDIA Mellanox InfiniBand HDR network. \n",
-    "The same network links the processors to 1.5 petabytes of flash memory on four storage servers from DataDirect Networks.\n"
+    "## The Bootcamp computer environment, a SuperPOD cluster  -\n",
+    "\n",
+    "For this bootcamp We will get access to NVIDIA DGX A100 systems. In general, it is highly recommanded to have access to large compute cluster when training very large language models.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "patent-arena",
+   "id": "enabling-jason",
    "metadata": {},
    "source": [
     "## Learning Objectives\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "average-strip",
+   "id": "fifth-argument",
    "metadata": {},
    "source": [
     "<!--**IMPORTANT**: Before we start please download the files specified in **Preparation work**.-->\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "israeli-going",
+   "id": "fleet-subject",
    "metadata": {},
    "source": [
     "---\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blind-holmes",
+   "id": "accessible-palestine",
    "metadata": {},
    "source": [
     "---\n",
