--- a/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "postal-promotion",
+   "id": "appreciated-playing",
    "metadata": {},
    "source": [
     "# \n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deadly-windows",
+   "id": "homeless-academy",
    "metadata": {},
    "source": [
     "<a id=\"Rerun_Cell\"></a>"
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "constant-affairs",
+   "execution_count": 30,
+   "id": "through-marketing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "transsexual-costume",
+   "execution_count": 29,
+   "id": "legitimate-thermal",
    "metadata": {},
    "outputs": [
     {
@@ -90,9 +90,9 @@
     "\n",
     "### modify this section to point the file to its own path \n",
     "CHECKPOINT_PATH='./Megatron-LM/sv_ckpt/'\n",
-    "DATA_PATH='../dataset/EN/NVblogs_text_document'\n",
-    "VOCAB_FILE='../dataset/EN/50k/gpt2-vocab.json'\n",
-    "MERGE_FILE='../dataset/EN/50k/gpt2-merges.txt'\n",
+    "DATA_PATH='../dataset/SV/webnyheter2013_text_document'\n",
+    "VOCAB_FILE='../dataset/SV/32k/vocab.json'\n",
+    "MERGE_FILE='../dataset/SV/32k/merges.txt'\n",
     "PROFILE_OUTPUT_PATH='/home/zcharpy/profiles/DLprof/2ndrun/nsys_improved' # modify this to your own profile path\n",
     "\n",
     "#### [TODO]--------------- params in the following block are allowed to change -----------#### \n",
@@ -101,7 +101,7 @@
     "\n",
     "TENSOR_MP_SIZE=8\n",
     "PIPELINE_MP_SIZE=1\n",
-    "LAYERS=32\n",
+    "LAYERS=64\n",
     "HIDDEN_SZ=2048\n",
     "NUM_ATTN_HEADS=32\n",
     "MICRO_BZ=64\n",
@@ -114,7 +114,7 @@
     "DISTRIBUTED_ARGS=\"--nproc_per_node $GPUS_PER_NODE --nnodes $NNODES --node_rank $NODE_RANK --master_addr $MASTER_ADDR --master_port $MASTER_PORT\"\n",
     "\n",
     "## for nsys run\n",
-    "nsys profile --stats=false --force-overwrite=true --duration=300 --trace=cudnn,cuda,osrt,nvtx -o $PROFILE_OUTPUT_PATH \\\n",
+    "#nsys profile --stats=false --force-overwrite=true --duration=300 --trace=cudnn,cuda,osrt,nvtx -o $PROFILE_OUTPUT_PATH \\\n",
     "python -m torch.distributed.launch $DISTRIBUTED_ARGS \\\n",
     "    ./Megatron-LM/Dlprof_pretrain_gpt.py \\\n",
     "       --tensor-model-parallel-size $TENSOR_MP_SIZE \\\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "constant-fighter",
+   "id": "accurate-riding",
    "metadata": {},
    "source": [
     "---\n",
@@ -161,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "weekly-mechanics",
+   "execution_count": 26,
+   "id": "minimal-lighter",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1677131776\n"
+      "3\n",
+      "3289513984\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concrete-finland",
+   "id": "cutting-patrol",
    "metadata": {},
    "source": [
     "---\n",
@@ -204,19 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "experienced-standing",
+   "execution_count": 31,
+   "id": "demographic-macro",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting data...\n",
       "Initializing NVTX monkey patches\n",
-      "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
-      "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
-      "Done with NVTX monkey patching\n",
+      "Initializing NVTX monkey patches\n",
       "Initializing NVTX monkey patches\n",
       "Initializing NVTX monkey patches\n",
       "Initializing NVTX monkey patches\n",
@@ -226,7 +223,6 @@
       "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
       "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
       "Done with NVTX monkey patching\n",
-      "Initializing NVTX monkey patches\n",
       "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
       "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
       "Done with NVTX monkey patching\n",
@@ -241,6 +237,9 @@
       "Done with NVTX monkey patching\n",
       "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
       "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
+      "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
+      "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
+      "Done with NVTX monkey patching\n",
       "Done with NVTX monkey patching\n",
       "/opt/conda/lib/python3.8/site-packages/torch/distributed/distributed_c10d.py:144: UserWarning: torch.distributed.reduce_op is deprecated, please use torch.distributed.ReduceOp instead\n",
       "  warnings.warn(\"torch.distributed.reduce_op is deprecated, please use \"\n",
@@ -273,7 +272,7 @@
       "  consumed_valid_samples .......................... 0\n",
       "  data_impl ....................................... mmap\n",
       "  data_parallel_size .............................. 1\n",
-      "  data_path ....................................... ['1.', '../dataset/EN/NVblogs_text_document']\n",
+      "  data_path ....................................... ['1.', '../dataset/SV/webnyheter2013_text_document']\n",
       "  dataloader_type ................................. single\n",
       "  DDP_impl ........................................ local\n",
       "  decoder_seq_length .............................. None\n",
@@ -330,7 +329,7 @@
       "  mask_prob ....................................... 0.15\n",
       "  masked_softmax_fusion ........................... True\n",
       "  max_position_embeddings ......................... 512\n",
-      "  merge_file ...................................... ../dataset/EN/50k/gpt2-merges.txt\n",
+      "  merge_file ...................................... ../dataset/SV/32k/merges.txt\n",
       "  micro_batch_size ................................ 64\n",
       "  min_loss_scale .................................. 1.0\n",
       "  min_lr .......................................... 1e-05\n",
@@ -342,7 +341,7 @@
       "  num_attention_heads ............................. 32\n",
       "  num_channels .................................... 3\n",
       "  num_classes ..................................... 1000\n",
-      "  num_layers ...................................... 32\n",
+      "  num_layers ...................................... 64\n",
       "  num_layers_per_virtual_pipeline_stage ........... None\n",
       "  num_workers ..................................... 2\n",
       "  onnx_safe ....................................... None\n",
@@ -383,13 +382,13 @@
       "  use_one_sent_docs ............................... False\n",
       "  virtual_pipeline_model_parallel_size ............ None\n",
       "  vocab_extra_ids ................................. 0\n",
-      "  vocab_file ...................................... ../dataset/EN/50k/gpt2-vocab.json\n",
+      "  vocab_file ...................................... ../dataset/SV/32k/vocab.json\n",
       "  weight_decay .................................... 0.01\n",
       "  world_size ...................................... 8\n",
       "-------------------- end of arguments ---------------------\n",
       "setting number of micro-batches to constant 8\n",
       "> building GPT2BPETokenizer tokenizer ...\n",
-      " > padded vocab (size: 50257) with 943 dummy tokens (new size: 51200)\n",
+      " > padded vocab (size: 32000) with 768 dummy tokens (new size: 32768)\n",
       "> initializing torch distributed ...\n",
       "> initializing tensor model parallel with size 8\n",
       "> initializing pipeline model parallel with size 1\n",
@@ -399,7 +398,7 @@
       "make: Entering directory '/home/zcharpy/bootcamp/jupyter_notebook/Megatron-LM/megatron/data'\n",
       "make: Nothing to be done for 'default'.\n",
       "make: Leaving directory '/home/zcharpy/bootcamp/jupyter_notebook/Megatron-LM/megatron/data'\n",
-      ">>> done with dataset index builder. Compilation time: 0.622 seconds\n",
+      ">>> done with dataset index builder. Compilation time: 0.167 seconds\n",
       "> compiling and loading fused kernels ...\n",
       "Detected CUDA files, patching ldflags\n",
       "Emitting ninja build file /home/zcharpy/bootcamp/jupyter_notebook/Megatron-LM/megatron/fused_kernels/build/build.ninja...\n",
@@ -419,24 +418,24 @@
       "Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)\n",
       "ninja: no work to do.\n",
       "Loading extension module fused_mix_prec_layer_norm_cuda...\n",
-      ">>> done with compiling and loading fused kernels. Compilation time: 31.948 seconds\n",
-      "time to initialize megatron (seconds): 9.410\n",
-      "[after megatron is initialized] datetime: 2021-08-30 05:52:25 \n",
+      ">>> done with compiling and loading fused kernels. Compilation time: 18.065 seconds\n",
+      "time to initialize megatron (seconds): 90.261\n",
+      "[after megatron is initialized] datetime: 2021-08-30 08:59:22 \n",
       "building GPT model ...\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (0, 0): 215937024\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (5, 0): 215937024\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (2, 0): 215937024\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (1, 0): 215937024\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (6, 0): 215937024\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (3, 0): 215937024 > number of parameters on (tensor, pipeline) model parallel rank (4, 0): 215937024\n",
-      "\n",
-      " > number of parameters on (tensor, pipeline) model parallel rank (7, 0): 215937024\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (1, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (4, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (6, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (7, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (0, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (2, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (3, 0): 412995584\n",
+      " > number of parameters on (tensor, pipeline) model parallel rank (5, 0): 412995584\n",
       "setting training iterations to 0\n",
       "> learning rate decay style: cosine\n",
       "WARNING: could not find the metadata file ./Megatron-LM/sv_ckpt/latest_checkpointed_iteration.txt \n",
       "    will not load any checkpoints and will start from random\n",
-      "time (ms) | load-checkpoint: 54.82\n",
-      "[after model, optimizer, and learning rate scheduler are built] datetime: 2021-08-30 05:52:29 \n",
+      "time (ms) | load-checkpoint: 25.10\n",
+      "[after model, optimizer, and learning rate scheduler are built] datetime: 2021-08-30 08:59:28 \n",
       "> building train, validation, and test datasets ...\n",
       " > datasets target sizes (minimum size):\n",
       "    train:      100\n",
@@ -449,38 +448,37 @@
       "    reading document index...\n",
       "    creating numpy buffer of mmap...\n",
       "    creating memory view of numpy buffer...\n",
-      " > finished creating indexed dataset in 0.005710 seconds\n",
-      "    number of documents: 74\n",
+      " > finished creating indexed dataset in 0.004143 seconds\n",
+      "    number of documents: 1249010\n",
       " > dataset split:\n",
       "    train:\n",
-      "     document indices in [0, 70) total of 70 documents\n",
+      "     document indices in [0, 1185311) total of 1185311 documents\n",
       "    validation:\n",
-      "     document indices in [70, 74) total of 4 documents\n",
+      "     document indices in [1185311, 1247761) total of 62450 documents\n",
       "    test:\n",
-      "     document indices in [74, 74) total of 0 documents\n",
-      " > WARNING: could not find index map files, building the indices on rank 0 ...\n",
-      " > only one epoch required, setting separate_last_epoch to False\n",
-      " > elasped time to build and save doc-idx mapping (seconds): 0.002701\n",
-      "    using:\n",
-      "     number of documents:       70\n",
-      "     number of epochs:          1\n",
-      "     sequence length:           512\n",
-      "     total number of samples:   141\n",
-      " > elasped time to build and save sample-idx mapping (seconds): 0.003840\n",
-      " > building shuffle index with split [0, 141) and [141, 141) ...\n",
-      " > elasped time to build and save shuffle-idx mapping (seconds): 0.001237\n",
-      " > loading doc-idx mapping from ../dataset/EN/NVblogs_text_document_train_indexmap_101ns_512sl_1234s_doc_idx.npy\n",
-      " > loading sample-idx mapping from ../dataset/EN/NVblogs_text_document_train_indexmap_101ns_512sl_1234s_sample_idx.npy\n",
-      " > loading shuffle-idx mapping from ../dataset/EN/NVblogs_text_document_train_indexmap_101ns_512sl_1234s_shuffle_idx.npy\n",
-      "    loaded indexed file in 0.003 seconds\n",
-      "    total number of samples: 142\n",
+      "     document indices in [1247761, 1249010) total of 1249 documents\n",
+      " > loading doc-idx mapping from ../dataset/SV/webnyheter2013_text_document_train_indexmap_101ns_512sl_1234s_doc_idx.npy\n",
+      " > loading sample-idx mapping from ../dataset/SV/webnyheter2013_text_document_train_indexmap_101ns_512sl_1234s_sample_idx.npy\n",
+      " > loading shuffle-idx mapping from ../dataset/SV/webnyheter2013_text_document_train_indexmap_101ns_512sl_1234s_shuffle_idx.npy\n",
+      "    loaded indexed file in 0.005 seconds\n",
+      "    total number of samples: 53948\n",
       "    total number of epochs: 1\n",
-      " > loading doc-idx mapping from ../dataset/EN/NVblogs_text_document_valid_indexmap_5146ns_512sl_1234s_doc_idx.npy\n",
-      " > loading sample-idx mapping from ../dataset/EN/NVblogs_text_document_valid_indexmap_5146ns_512sl_1234s_sample_idx.npy\n",
-      " > loading shuffle-idx mapping from ../dataset/EN/NVblogs_text_document_valid_indexmap_5146ns_512sl_1234s_shuffle_idx.npy\n",
+      " > loading doc-idx mapping from ../dataset/SV/webnyheter2013_text_document_valid_indexmap_5146ns_512sl_1234s_doc_idx.npy\n",
+      " > loading sample-idx mapping from ../dataset/SV/webnyheter2013_text_document_valid_indexmap_5146ns_512sl_1234s_sample_idx.npy\n",
+      " > loading shuffle-idx mapping from ../dataset/SV/webnyheter2013_text_document_valid_indexmap_5146ns_512sl_1234s_shuffle_idx.npy\n",
       "    loaded indexed file in 0.003 seconds\n",
-      "    total number of samples: 5153\n",
-      "    total number of epochs: 664\n",
+      "    total number of samples: 5695\n",
+      "    total number of epochs: 2\n",
+      " > loading doc-idx mapping from ../dataset/SV/webnyheter2013_text_document_test_indexmap_5146ns_512sl_1234s_doc_idx.npy\n",
+      " > loading sample-idx mapping from ../dataset/SV/webnyheter2013_text_document_test_indexmap_5146ns_512sl_1234s_sample_idx.npy\n",
+      " > loading shuffle-idx mapping from ../dataset/SV/webnyheter2013_text_document_test_indexmap_5146ns_512sl_1234s_shuffle_idx.npy\n",
+      "    loaded indexed file in 0.003 seconds\n",
+      "    total number of samples: 5192\n",
+      "    total number of epochs: 91\n",
+      "> building indices for blendable datasets ...\n",
+      " > sample ratios:\n",
+      "   dataset 0, input: 1, achieved: 1\n",
+      "> elapsed time for building blendable dataset indices: 0.00 (sec)\n",
       "> building indices for blendable datasets ...\n",
       " > sample ratios:\n",
       "   dataset 0, input: 1, achieved: 1\n",
@@ -490,22 +488,18 @@
       "   dataset 0, input: 1, achieved: 1\n",
       "> elapsed time for building blendable dataset indices: 0.00 (sec)\n",
       "> finished creating GPT datasets ...\n",
-      "[after dataloaders are built] datetime: 2021-08-30 05:52:33 \n",
+      "[after dataloaders are built] datetime: 2021-08-30 08:59:32 \n",
       "done with setup ...\n",
       "training ...\n",
-      "time (ms) | model-and-optimizer-setup: 3872.16 | train/valid/test-data-iterators-setup: 2957.85\n",
-      "[after training is done] datetime: 2021-08-30 05:52:34 \n",
+      "time (ms) | model-and-optimizer-setup: 6065.80 | train/valid/test-data-iterators-setup: 2661.91\n",
+      "[after training is done] datetime: 2021-08-30 08:59:32 \n",
       "------------------------------------------------------------------------------------------------------------------\n",
-      " validation loss at the end of training for val data | lm loss value: 1.124461E+01 | lm loss PPL: 7.646642E+04 | \n",
+      " validation loss at the end of training for val data | lm loss value: 1.081321E+01 | lm loss PPL: 4.967259E+04 | \n",
       "------------------------------------------------------------------------------------------------------------------\n",
-      "Processing events...\n",
-      "Capturing symbol files...\n",
-      "Saving temporary \"/tmp/nsys-report-c19d-0647-d480-f24c.qdstrm\" file to disk...\n",
-      "Creating final output files...\n",
-      "\n",
-      "Processing [==============================================================100%]\n",
-      "Saved report file to \"/tmp/nsys-report-c19d-0647-d480-f24c.qdrep\"\n",
-      "Report file moved to \"/home/zcharpy/profiles/DLprof/2ndrun/nsys_improved.qdrep\"\n"
+      "Evaluating iter 10/10\n",
+      "-------------------------------------------------------------------------------------------------------------------\n",
+      " validation loss at the end of training for test data | lm loss value: 1.081394E+01 | lm loss PPL: 4.970880E+04 | \n",
+      "-------------------------------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -515,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-night",
+   "id": "opening-latter",
    "metadata": {},
    "source": [
     "## Remember to copy and paste your output on Slack or Zoom\n",
@@ -524,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interpreted-escape",
+   "id": "jewish-tomorrow",
    "metadata": {},
    "source": [
     "-----\n",
