--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-2_SentenceBoundary_and_Deduplicate.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-2_SentenceBoundary_and_Deduplicate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "virtual-gasoline",
+   "id": "prerequisite-duration",
    "metadata": {},
    "source": [
     "# \n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-manufacturer",
+   "id": "israeli-buddy",
    "metadata": {},
    "source": [
     "--------------------------------------------------------------------------------------------------------------------\n",
@@ -40,7 +40,12 @@
     "\n",
     "    follow instruction from [Megatron-LM/tools/openwebtext/README](https://github.com/NVIDIA/Megatron-LM/tree/main/tools/openwebtext) in openwebtext clearning folder \n",
     "\n",
-    "    note : in a restricted environment where sudo is not allowed, please follow the below instruction to modify installation\n",
+    "    note : in a restricted environment where sudo is not allowed, please follow the below instruction to modify installation ---\n",
+    "            \n",
+    "            call out a terminal             \n",
+    "   ![call out a terminal ](../../pics/Alt_callout2terminals.JPG)\n",
+    "   \n",
+    "            cd ./jupyter_notebook/Megatron-LM/tools/openwebtext/\n",
     "        \n",
     "            git clone https://github.com/mattilyra/LSH\n",
     "            cd LSH\n",
@@ -53,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "stainless-courtesy",
+   "id": "superior-identifier",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "returning-internship",
+   "id": "coordinated-costa",
    "metadata": {},
    "source": [
     "-------------------------------------------------------------------------------\n",
@@ -116,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "brown-satisfaction",
+   "id": "bored-utility",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "induced-aquatic",
+   "id": "mineral-venue",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "overhead-panama",
+   "id": "serious-reach",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-fifteen",
+   "id": "mediterranean-disability",
    "metadata": {},
    "source": [
     "-----------------------------------------------------------\n",
@@ -192,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "precise-melissa",
+   "id": "fancy-affiliate",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "unauthorized-azerbaijan",
+   "id": "flush-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-observer",
+   "id": "lonely-february",
    "metadata": {},
    "source": [
     "-----------------------------------------------------------\n",
@@ -261,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interested-companion",
+   "id": "lesbian-finland",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-tanzania",
+   "id": "consistent-society",
    "metadata": {},
    "source": [
     "-----------------------------------------------------------\n",
@@ -296,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "pregnant-defensive",
+   "id": "simple-withdrawal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fleet-above",
+   "id": "employed-mercy",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "filled-silence",
+   "id": "palestinian-reason",
    "metadata": {},
    "source": [
     "-----------------------------------------------------------\n",
@@ -367,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "radical-facing",
+   "id": "imported-dispatch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "african-savannah",
+   "id": "altered-darkness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "standard-auditor",
+   "id": "incoming-invitation",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "found-shuttle",
+   "id": "fabulous-brown",
    "metadata": {},
    "source": [
     "## dataset extracted from NVIDIA blog urls "
@@ -465,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "regulated-dating",
+   "id": "adjusted-salvation",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-respect",
+   "id": "painful-uncertainty",
    "metadata": {},
    "source": [
     "## create our own groudtruth dataset"
@@ -549,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "indie-citation",
+   "id": "impressed-wound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "earlier-rogers",
+   "id": "complete-powell",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "healthy-bullet",
+   "id": "correct-blocking",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "direct-manchester",
+   "id": "infinite-convergence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continental-anthony",
+   "id": "little-quilt",
    "metadata": {},
    "source": [
     "---\n",
@@ -794,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "superior-victim",
+   "id": "distributed-authentication",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-gentleman",
+   "id": "tribal-diagnosis",
    "metadata": {},
    "source": [
     "---\n",
@@ -901,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "marked-latino",
+   "id": "graphic-august",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "analyzed-carol",
+   "id": "centered-study",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -932,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pretty-plumbing",
+   "id": "egyptian-peter",
    "metadata": {},
    "source": [
     "---\n",
@@ -957,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "excessive-illness",
+   "id": "current-colonial",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -975,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "gorgeous-brother",
+   "id": "prostate-jackson",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -999,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "tribal-vienna",
+   "id": "understanding-defeat",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1033,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "automotive-steam",
+   "id": "magnetic-indiana",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1053,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "coated-separate",
+   "id": "major-mathematics",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1088,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complicated-spanish",
+   "id": "appointed-analyst",
    "metadata": {},
    "source": [
     "---\n",
@@ -1102,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organized-monthly",
+   "id": "furnished-boutique",
    "metadata": {},
    "source": [
     "-----\n",
